# prototypes

./: .gitignore  README.md
prototype_audio_extension_chrome/: README.md
prototype_audio_extension_chrome/gpt-audio/.devcontainer/: Dockerfile
prototype_audio_extension_chrome/gpt-audio/extension-chrome/: .devcontainer.json  manifest.json  package-lock.json
prototype_audio_extension_chrome/gpt-audio/extension-chrome/css/: style.css
prototype_audio_extension_chrome/gpt-audio/extension-chrome/js/: index.js
prototype_crypto_tracker_ios/: README.md
prototype_crypto_tracker_ios/CryptoTrack/: ContentView.swift  CryptoCell.swift  CryptoDetailScreen.swift  CryptoTrackApp.swift  Data.swift
prototype_crypto_tracker_ios/CryptoTrack.xcodeproj/: project.pbxproj
prototype_crypto_tracker_ios/CryptoTrack.xcodeproj/project.xcworkspace/xcuserdata/bxota.xcuserdatad/: UserInterfaceState.xcuserstate
prototype_crypto_tracker_ios/CryptoTrack/Assets.xcassets/Colors/AccentGreen.colorset/: Contents.json
prototype_crypto_tracker_ios/CryptoTrack/Assets.xcassets/Colors/AccentRed.colorset/: Contents.json
prototype_crypto_tracker_ios/CryptoTrackTests/: CryptoTrackTests.swift
prototype_crypto_tracker_ios/CryptoTrackUITests/: CryptoTrackUITests.swift  CryptoTrackUITestsLaunchTests.swift
prototypes_lib_c/: README.md  a.out  main.c  my_lib.h  my_putchar.c  my_puts.c  my_strlen.c  strconv.c  tests.c
test_animation_scroll_letter/: README.md  test.html
test_header_metamask/: README.md  test.html
test_interface_graphique/: CMakeLists.txt  README.md  main.cpp
(+4 files in other folders)
